# XHS_RS_TOOLS

./: .gitignore  Cargo.toml  LICENSE  README.md  client_demo.py  docker-compose.yml  headless_page.html
doc/: api_reference.md  channel_navigation_optimization.md
docker/: Dockerfile.agent
examples/: check_creator_info.rs  test_browser_login.rs  test_mongodb.rs
scripts/: agent_server.py  check_sigs.py  clean_db.py  login.py  login_original.py  requirements.txt
scripts/test_demo/: test_media.py  test_search.py
scripts/xhs_playwright/: __init__.py  browser.py  config.py  qr_code.py  signature.py  storage.py
src/: agent_manager.rs  client.rs  config.rs  lib.rs  main.rs  openapi.rs  server.rs
src/api/: common.rs  login.rs  mod.rs  search.rs  user.rs
src/api/creator/: auth.rs  info.rs  mod.rs  models.rs  utils.rs
src/api/feed/: category.rs  mod.rs  recommend.rs
src/api/media/: download.rs  images.rs  mod.rs  video.rs
src/api/notification/: connections.rs  likes.rs  mentions.rs
src/auth/: browser.rs  credentials.rs  mod.rs  service.rs  storage.rs
src/handlers/: auth.rs  creator.rs  feed.rs  media.rs  mod.rs
src/models/: login.rs  mod.rs  search.rs  user.rs
src/models/feed/: mod.rs  recommend.rs
src/signature/: mod.rs
src/utils/: mod.rs  qrcode.rs  sign.rs
