[package]
name = "xhs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
cookie = "0.17"
cookie_store = "0.20"
reqwest_cookie_store = "0.8"
url = "2"
log = "0.4"
base64 = "0.22"
rand = "0.8"
md5 = "0.7"
axum = "0.7"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Dependencies for credential management (JSON file storage)
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"  # For lazy static agent manager
qrcode = "0.14"  # For terminal ASCII QR code display
urlencoding = "2.1.3"
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
time = { version = "0.3.45", features = ["macros", "local-offset"] }

